--- a/apps/email-alert-api.html
+++ b/apps/email-alert-api.html
@@ -444,16 +444,16 @@
 </div></dl>
     <div class="gem-c-summary__block"></div>
 </div>
-<h2 id='relevant-manual-pages'>Relevant manual pages</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="/manual/bulk-email.html" class="govuk-link">Send a bulk email</a></li>
-</ul></p>
 <h2 id='imported-documents'>Imported documents</h2>
 <ul>
 <li><a href='/apps/email-alert-api/analytics.html' class='govuk-link'>Analytics</a></li>
         <li><a href='/apps/email-alert-api/api.html' class='govuk-link'>Available endpoints</a></li>
         <li><a href='/apps/email-alert-api/data-cleanup-mechanisms.html' class='govuk-link'>Data cleanup mechanisms</a></li>
         <li><a href='/apps/email-alert-api/env-vars.html' class='govuk-link'>ENV vars</a></li>
+        <li><a href='/apps/email-alert-api/load-test-email-alert-api.html' class='govuk-link'>Load test Email Alert API</a></li>
         <li><a href='/apps/email-alert-api/matching-content-to-subscriber-lists.html' class='govuk-link'>Matching content to subscriber lists</a></li>
+        <li><a href='/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html' class='govuk-link'>Receive emails from Email Alert API in Integration and Staging</a></li>
+        <li><a href='/apps/email-alert-api/bulk-email.html' class='govuk-link'>Send a bulk email</a></li>
         <li><a href='/apps/email-alert-api/support-tasks.html' class='govuk-link'>Support tasks</a></li>
 
 
