--- a/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html
+++ b/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html
@@ -6,25 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>Application: search-admin - GOV.UK Developer Documentation</title>
+    <title>email-alert-api: Receive emails from Email Alert API in Integration and Staging - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/search-admin.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html">
 
-      <meta name="description" content="Everything about the search-admin application (Admin for GOV.UK search)" />
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="Application: search-admin - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/search-admin.html" />
+      <meta name="twitter:title" content="email-alert-api: Receive emails from Email Alert API in Integration and Staging - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html" />
 
-      <meta property="og:description" content="Everything about the search-admin application (Admin for GOV.UK search)" />
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="Application: search-admin" />
+      <meta property="og:title" content="email-alert-api: Receive emails from Email Alert API in Integration and Staging" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/search-admin.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html" />
 
     
   </head>
@@ -167,7 +165,7 @@
           <li><a href="/apps/govuk-load-testing.html"><span>govuk-load-testing</span></a></li>
           <li><a href="/apps/release.html"><span>release</span></a></li>
           <li><a href="/apps/router.html"><span>router</span></a></li>
-          <li><a href="/apps/search-admin.html" class="toc-link--in-view"><span>search-admin</span></a></li>
+          <li><a href="/apps/search-admin.html"><span>search-admin</span></a></li>
           <li><a href="/apps/signon.html"><span>signon</span></a></li>
           <li><a href="/apps/support.html"><span>support</span></a></li>
         </ul>
@@ -338,6 +336,14 @@
         "name": "Apps",
         "@id": "http://www.dev.gov.uk/apps.html"
       }
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "item": {
+        "name": "email-alert-api",
+        "@id": "http://www.dev.gov.uk/apps/email-alert-api.html"
+      }
     }
   ]
 }
@@ -349,146 +355,51 @@
           <a data-track-category="homeLinkClicked" data-track-action="homeBreadcrumb" data-track-label="" data-track-options="{}" class="govuk-breadcrumbs__link" href="/">Home</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/apps.html" data-track-options="{&quot;dimension28&quot;:&quot;2&quot;,&quot;dimension29&quot;:&quot;Apps&quot;}" class="govuk-breadcrumbs__link" href="/apps.html">Apps</a>
+          <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/apps.html" data-track-options="{&quot;dimension28&quot;:&quot;3&quot;,&quot;dimension29&quot;:&quot;Apps&quot;}" class="govuk-breadcrumbs__link" href="/apps.html">Apps</a>
+        </li>
+        <li class="govuk-breadcrumbs__list-item">
+          <a data-track-category="breadcrumbClicked" data-track-action="3" data-track-label="/apps/email-alert-api.html" data-track-options="{&quot;dimension28&quot;:&quot;3&quot;,&quot;dimension29&quot;:&quot;email-alert-api&quot;}" class="govuk-breadcrumbs__link" href="/apps/email-alert-api.html">email-alert-api</a>
         </li>
   </ol>
 </div>
 
-  
-  <h1 class="page-title">Application: search-admin</h1>
+  <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  <p>Admin for GOV.UK search</p>
-
-<div class="gem-c-summary-list  ">
-
-      <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">GitHub</dt>
-            <dd class="govuk-summary-list__value"><a href="https://github.com/alphagov/search-admin">search-admin</a></dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div>          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">Ownership</dt>
-            <dd class="govuk-summary-list__value">#govuk-platform-health</dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div>          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">Hosting</dt>
-            <dd class="govuk-summary-list__value"><strong>AWS</strong>, on the <strong>backend</strong> machine class</dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div>          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">Continuously deployed?</dt>
-            <dd class="govuk-summary-list__value">No</dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div>          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">Rake tasks</dt>
-            <dd class="govuk-summary-list__value"><span aria-hidden='true'>Run a Rake task on</span> <a
-      href="https://deploy.integration.publishing.service.gov.uk/job/run-rake-task/parambuild/?TARGET_APPLICATION=search-admin&MACHINE_CLASS=backend&RAKE_TASK="
-      class="govuk-link"
-      aria-label="Run a Rake task on Integration">Integration</a>, <a
-      href="https://deploy.blue.staging.govuk.digital/job/run-rake-task/parambuild/?TARGET_APPLICATION=search-admin&MACHINE_CLASS=backend&RAKE_TASK="
-      class="govuk-link"
-      aria-label="Run a Rake task on Staging">Staging</a> or <a
-      href="https://deploy.blue.production.govuk.digital/job/run-rake-task/parambuild/?TARGET_APPLICATION=search-admin&MACHINE_CLASS=backend&RAKE_TASK="
-      class="govuk-link"
-      aria-label="Run a Rake task on Production">⚠️ Production ⚠️</a></dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div>          <div class="govuk-summary-list__row">
-
-            <dt class="govuk-summary-list__key">Links</dt>
-            <dd class="govuk-summary-list__value"><ul>
-    <li><a href="https://sentry.io/govuk/app-search-admin" class="govuk-link">Sentry (error tracking)</a></li>
-
-
-    <li><a href="https://github.com/alphagov/govuk-puppet/blob/master/modules/govuk/manifests/apps/search_admin.pp" class="govuk-link">Puppet configuration</a></li>
-
-    <li><a href="https://github.com/alphagov/govuk-app-deployment/blob/master/search-admin/config/deploy.rb" class="govuk-link">Deploy scripts</a></li>
-
-    <li><a href="https://grafana.production.govuk.digital/dashboard/file/search-admin.json" class="govuk-link">Deployment dashboard</a></li>
-
-
-
-
-
-</ul>
-</dd>
-
-
-
-              <dd class="govuk-summary-list__actions">
-</dd>
-</div></dl>
-    <div class="gem-c-summary__block"></div>
+  Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/470054bda41385a0bd39a6151bdbdba6026c7063">7 May 2021</a>
 </div>
-<h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
-      <li><a href="http://www.wandsworth.gov.uk/" class="govuk-link">London Borough of Wandsworth Council</a></li>
-      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
-      <li><a href="http://www.hertsmere.gov.uk/" class="govuk-link">Hertsmere Borough Council</a></li>
-      <li><a href="http://www.cheshireeast.gov.uk" class="govuk-link">Cheshire East Council</a></li>
-      <li><a href="http://www.bracknell-forest.gov.uk" class="govuk-link">Bracknell Forest Borough Council</a></li>
-      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
-      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
-</ul></p>
-<h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
-<p>Manages search &ldquo;best bets&rdquo; and &ldquo;external links&rdquo; along with other search and browse data.</p>
+  <h1 class="page-title">email-alert-api: Receive emails from Email Alert API in Integration and Staging</h1>
 
-<h2 id="screenshots">Screenshots</h2>
-
-<p><img src="https://raw.githubusercontent.com/alphagov/search-admin/master/docs/images/screenshot.png" alt="Search Admin"></p>
-
-<h2 id="live-example">Live example</h2>
-
-<ul>
-<li><a href="https://search-admin.publishing.service.gov.uk/">https://search-admin.publishing.service.gov.uk/</a></li>
-</ul>
-
-<h2 id="technical-documentation">Technical documentation</h2>
-
-<p>This is a Ruby on Rails app, and should follow <a href="https://docs.publishing.service.gov.uk/manual/conventions-for-rails-applications.html">our Rails app conventions</a>.</p>
-
-<p>You can use the <a href="https://github.com/alphagov/govuk-docker">GOV.UK Docker environment</a> to run the application and its tests with all the necessary dependencies. Follow <a href="https://github.com/alphagov/govuk-docker#usage">the usage instructions</a> to get started.</p>
-
-<p><strong>Use GOV.UK Docker to run any commands that follow.</strong></p>
-
-<h3 id="running-the-test-suite">Running the test suite</h3>
-
-<p><code>bundle exec rake</code></p>
-
-<h3 id="external-links">External links</h3>
-
-<p>Run <code>bundle exec rake publish_external_links:publishing_api</code> to send all external links to the publishing API.</p>
-
-<h2 id="licence">Licence</h2>
-
-<p><a href="https://github.com/alphagov/search-admin/blob/master/LICENSE">MIT License</a></p>
-<p></div></p>
+  
+<p>In order to test receiving real emails from Email Alert API we have configured
+Google groups for the integration and staging environments. Emails
+sent to addresses other than those of these groups will be
+<a href="https://github.com/alphagov/email-alert-api/blob/006afa2ee6c35631b83b16519f8af2c6c2ea5c59/app/services/send_email_service/send_pseudo_email.rb#L10-L20">written to a logfile</a>.</p>
+<h2 id="in-integration">In Integration</h2>
+<p>In Integration there is the <a href="https://groups.google.com/a/digital.cabinet-office.gov.uk/g/email-alert-api-integration">Email Alert API Integration Google
+group</a>. It has an email address of
+<code>email-alert-api-integration@digital.cabinet-office.gov.uk</code>.</p>
+<p>This account can be used to sign up to subscriptions on
+<a href="https://www.integration.publishing.service.gov.uk/">https://www.integration.publishing.service.gov.uk/</a>.</p>
+<h2 id="in-staging">In Staging</h2>
+<p>In Staging there is the <a href="https://groups.google.com/a/digital.cabinet-office.gov.uk/g/email-alert-api-staging">Email Alert API Staging Google
+group</a>. It has an email address of
+<code>email-alert-api-staging@digital.cabinet-office.gov.uk</code>.</p>
+<p>This account can be used to sign up to subscriptions on
+<a href="https://www.staging.publishing.service.gov.uk/">https://www.staging.publishing.service.gov.uk/</a>.</p>
+<h2 id="how-to-use">How to use</h2>
+<p>To use these Google groups you need to interact with the Email Alert system
+using the group email as your email address. For example, if you wanted to test
+receiving the content change alerts for travel advice, you can
+<a href="https://www.integration.publishing.service.gov.uk/foreign-travel-advice/thailand/email-signup">sign-up to receive travel advice</a> with the group email address.
+Your next step would be to check the Google group for
+an email to confirm the subscription. Once confirmed, you can then publish
+a change in <a href="https://travel-advice-publisher.integration.publishing.service.gov.uk/admin/countries/thailand">Travel Advice Publisher</a> to generate the content change
+alert email.</p>
+<p>If you are testing over multiple days, bear in mind that each night the
+databases in Integration and Staging are reset due to the <a href="https://github.com/alphagov/email-alert-api/blob/master/docs/manual/govuk-env-sync.html">data sync</a>.
+This will mean that any test subscriptions you've created will be lost and
+you'll need to recreate them.</p>
 
 
             
@@ -496,8 +407,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/data/applications.yml">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/search-admin.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/email-alert-api/blob/main/docs/receiving-emails-from-email-alert-api-in-integration-and-staging.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20''&amp;body=Problem%20with%20''%20(https://docs.publishing.service.gov.uk/apps/email-alert-api/receiving-emails-from-email-alert-api-in-integration-and-staging.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
